--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "dev": "rollup --config rollup.config.dev.js",
         "build": "rollup --config rollup.config.dist.js",
-        "watch": "rollup --watch --config rollup.config.dev.js"
+        "watch": "rollup --watch --config rollup.config.dev.js",
+        "deploy": "touch dist/.nojekyll && gh-pages -t -d dist -m \"Build for $(git log -n1 --pretty=format:\"%h %s\") [skip ci]\""
     },
     "repository": {
         "type": "git",
@@ -18,16 +19,16 @@
         "url": "https://github.com/photonstorm/phaser3-typescript-project-template/issues"
     },
     "homepage": "https://github.com/photonstorm/phaser3-typescript-project-template#readme",
-    "dependencies": {},
     "devDependencies": {
         "@rollup/plugin-replace": "^2.3.4",
+        "gh-pages": "^4.0.0",
         "phaser": "^3.50.0",
         "rollup": "^2.35.1",
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-serve": "^1.1.0",
+        "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.29.0",
-        "rollup-plugin-uglify": "^6.0.4",
         "typescript": "^4.1.3"
     }
 }
